# TradingAgent

./: .env.example  .gitignore  .graphifyignore  KNOWLEDGE_GRAPH.md  README.md  Thought_process.md  app.py  pyproject.toml  requirements.txt
scripts/: run_cycle.py  run_scheduler.py
src/stocks_analyser/: __init__.py  config.py  engine.py  indicators.py  models.py  scheduler.py  storage.py  strategy.py
src/stocks_analyser/data/: __init__.py  dhan_adapter.py  tickertape_client.py  yfinance_provider.py
src/stocks_analyser/llm/: __init__.py  nvidia_crosscheck.py
tests/: test_engine_crosscheck.py  test_engine_modes.py  test_indicators.py  test_nvidia_crosscheck.py  test_yfinance_provider.py
